--- a/002.html
+++ b/002.html
@@ -18,7 +18,7 @@
       <input type="hidden" name="cart_id" value="123">
     </form>
 
-    <!-- Agrega el script para configurar Kajita y solicitar el token de suscripción -->
+    <!-- Agrega el script para configurar Kajita -->
     <script type="text/javascript">
       var kushki = new KushkiCheckout({
           kformId: "CseJZKRvp",
